--- a/public/.htaccess
+++ b/public/.htaccess
@@ -32,6 +32,6 @@ ExpiresDefault "access 2 days"
 </IfModule>
 ## EXPIRES CACHING ##
 
-RewriteEngine On
-RewriteCond %{HTTP:X-Forwarded-SSL} !on
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+## RewriteEngine On ##
+## RewriteCond %{HTTP:X-Forwarded-SSL} !on ##
+## RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L] ##
