--- a/.htaccess
+++ b/.htaccess
@@ -7,3 +7,12 @@
 	RewriteCond %{REQUEST_URI} !^/(favicon\.ico|apple-touch-icon.*\.png)$ [NC]
 	RewriteRule (.+) index.php?p=$1 [QSA,L]
 </IfModule>
+
+
+# Remove www from any URLs that have them:
+RewriteEngine on
+RewriteCond %{HTTP_HOST} ^www\.
+RewriteRule ^(.*)$ http://mbarseattle.com/$1 [R=301,L]
+
+
+
