--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,4 +6,15 @@
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteCond %{REQUEST_URI} !^/(favicon\.ico|apple-touch-icon.*\.png)$ [NC]
 	RewriteRule (.+) index.php?p=$1 [QSA,L]
+
 </IfModule>
+
+
+
+RewriteEngine On
+RewriteCond %{HTTP:X-Forwarded-SSL} !on
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+
+
+
+
